# social_interaction

./: .travis.yml  INSTALL  README.md  START  docker-compose.build.yml  docker-compose.yml  index.html  install.sh  start.sh
app/: gulpfile.js  package-lock.json  package.json
app/public/css/: style.css
app/public/scss/components/: _robot.scss
app/public/scss/layout/: _layout.scss
app/public/stylesheets/: style.css  style.css.map
app/public/stylesheets/components/: _components.scss  _robot.scss
app/views/: index.pug
devel/: .catkin  .rosinstall  setup.sh
devel/lib/pkgconfig/: social_interaction.pc
devel/share/social_interaction/cmake/: social_interactionConfig.cmake
docker/: Dockerfile  docker-entrypoint.sh  docker_push
src/: CMakeLists.txt  app.js  gulpfile.js  package-lock.json  package.json  start.sh
src/adapters/: processToInteraction.js  rosAction.js  rosConnection.js  rosIsActive.js
src/config/: screenSize.js
src/interactions/: aboutWilly.js  directions.js  interactionBase.js  joke.js  map.js  schedule.js  survey.js  unknown.js
src/interactions/assets/: jokes.json  survey.csv  survey.json  survey_answers.csv
src/public/css/: style.css
src/public/scripts/: client.js
src/public/scss/: _variables.scss  style.scss
src/public/scss/components/: _components.scss  _confetti.scss  _image.scss  _information_row.scss  _robot.scss  _survey.scss
src/public/scss/layout/: _layout.scss
src/views/: active_information.pug  image.pug  index.pug  information.pug  layout.pug  not_active_information.pug  survey.pug  survey_information.pug
